{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 60,
  "lineage": "5b3202a5-751e-8a62-714b-6f183b959534",
  "resources": [
    {
      "module": "module.dev_vpc_east_2_deploy",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:internet-gateway/igw-0874dfb1dc70aa7b2",
            "id": "igw-0874dfb1dc70aa7b2",
            "owner_id": "226925361307",
            "vpc_id": "vpc-0821bf04670ca5f66"
          },
          "dependencies": [
            "module.dev_vpc_east_2_deploy.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc_east_2_deploy",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0874dfb1dc70aa7b2",
            "id": "r-rtb-0a293862936abdff71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a293862936abdff7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_vpc_east_2_deploy.aws_internet_gateway.internet_gateway",
            "module.dev_vpc_east_2_deploy.aws_route_table.public_rtb",
            "module.dev_vpc_east_2_deploy.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc_east_2_deploy",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:route-table/rtb-0a293862936abdff7",
            "id": "rtb-0a293862936abdff7",
            "owner_id": "226925361307",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0821bf04670ca5f66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_vpc_east_2_deploy.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc_east_2_deploy",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtb_assign",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.dev_vpc_east_2_deploy",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:subnet/subnet-0a773295f8d1dc497",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.26.1.0/25",
            "id": "subnet-0a773295f8d1dc497",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226925361307",
            "tags": {
              "Name": "dev_us_east-private-subnet"
            },
            "tags_all": {
              "Name": "dev_us_east-private-subnet"
            },
            "vpc_id": "vpc-0821bf04670ca5f66"
          },
          "dependencies": [
            "module.dev_vpc_east_2_deploy.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:subnet/subnet-07ae8c05dd80563b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.26.1.128/25",
            "id": "subnet-07ae8c05dd80563b0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226925361307",
            "tags": {
              "Name": "dev_us_east-private-subnet"
            },
            "tags_all": {
              "Name": "dev_us_east-private-subnet"
            },
            "vpc_id": "vpc-0821bf04670ca5f66"
          },
          "dependencies": [
            "module.dev_vpc_east_2_deploy.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:subnet/subnet-022221091f49debbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.26.0.0/25",
            "id": "subnet-022221091f49debbf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226925361307",
            "tags": {
              "Name": "dev_us_east-private-subnet"
            },
            "tags_all": {
              "Name": "dev_us_east-private-subnet"
            },
            "vpc_id": "vpc-0821bf04670ca5f66"
          },
          "dependencies": [
            "module.dev_vpc_east_2_deploy.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc_east_2_deploy",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:vpc/vpc-0821bf04670ca5f66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.26.0.0/23",
            "default_network_acl_id": "acl-0ac704b1d122bc960",
            "default_route_table_id": "rtb-0fbdf5b69a3110ded",
            "default_security_group_id": "sg-01f091a089c586502",
            "dhcp_options_id": "dopt-0c534b5c951b15390",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0821bf04670ca5f66",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fbdf5b69a3110ded",
            "owner_id": "226925361307"
          }
        }
      ]
    },
    {
      "module": "module.dev_vpc_east_2_tgw_attach",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0cbc6147a6da7c1ba",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-022221091f49debbf",
              "subnet-07ae8c05dd80563b0",
              "subnet-0a773295f8d1dc497"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-04916ed6d9e14938a",
            "vpc_id": "vpc-0821bf04670ca5f66",
            "vpc_owner_id": "226925361307"
          },
          "dependencies": [
            "module.dev_vpc_east_2_deploy.aws_subnet.private_subnet",
            "module.dev_vpc_east_2_deploy.aws_vpc.vpc",
            "module.transit_gateway_us_east_1.aws_ec2_transit_gateway.transit_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_east_1_deploy",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:internet-gateway/igw-0b767c2f734fdfaf8",
            "id": "igw-0b767c2f734fdfaf8",
            "owner_id": "226925361307",
            "vpc_id": "vpc-0e3a75a0882ad8f79"
          },
          "dependencies": [
            "module.prod_vpc_east_1_deploy.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_east_1_deploy",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b767c2f734fdfaf8",
            "id": "r-rtb-0a52a8850f34c418c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a52a8850f34c418c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc_east_1_deploy.aws_internet_gateway.internet_gateway",
            "module.prod_vpc_east_1_deploy.aws_route_table.public_rtb",
            "module.prod_vpc_east_1_deploy.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_east_1_deploy",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:route-table/rtb-0a52a8850f34c418c",
            "id": "rtb-0a52a8850f34c418c",
            "owner_id": "226925361307",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0e3a75a0882ad8f79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc_east_1_deploy.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_east_1_deploy",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtb_assign",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0072915135ce5e360",
            "route_table_id": "rtb-0a52a8850f34c418c",
            "subnet_id": "subnet-0ebc29e768df5d389"
          },
          "dependencies": [
            "module.prod_vpc_east_1_deploy.aws_route_table.public_rtb",
            "module.prod_vpc_east_1_deploy.aws_subnet.public_subnet",
            "module.prod_vpc_east_1_deploy.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e58da7be7f947f7",
            "route_table_id": "rtb-0a52a8850f34c418c",
            "subnet_id": "subnet-05f75e9a9e2c80c64"
          },
          "dependencies": [
            "module.prod_vpc_east_1_deploy.aws_route_table.public_rtb",
            "module.prod_vpc_east_1_deploy.aws_subnet.public_subnet",
            "module.prod_vpc_east_1_deploy.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_east_1_deploy",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:subnet/subnet-05ad8a03574708155",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.25.1.0/25",
            "id": "subnet-05ad8a03574708155",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226925361307",
            "tags": {
              "Name": "prod_us_east-private-subnet"
            },
            "tags_all": {
              "Name": "prod_us_east-private-subnet"
            },
            "vpc_id": "vpc-0e3a75a0882ad8f79"
          },
          "dependencies": [
            "module.prod_vpc_east_1_deploy.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:subnet/subnet-005b2d91510595aa9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.25.1.128/25",
            "id": "subnet-005b2d91510595aa9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226925361307",
            "tags": {
              "Name": "prod_us_east-private-subnet"
            },
            "tags_all": {
              "Name": "prod_us_east-private-subnet"
            },
            "vpc_id": "vpc-0e3a75a0882ad8f79"
          },
          "dependencies": [
            "module.prod_vpc_east_1_deploy.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_east_1_deploy",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:subnet/subnet-0ebc29e768df5d389",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.25.0.0/25",
            "id": "subnet-0ebc29e768df5d389",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226925361307",
            "tags": {
              "Name": "prod_us_east-public-subnet"
            },
            "tags_all": {
              "Name": "prod_us_east-public-subnet"
            },
            "vpc_id": "vpc-0e3a75a0882ad8f79"
          },
          "dependencies": [
            "module.prod_vpc_east_1_deploy.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:subnet/subnet-05f75e9a9e2c80c64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.25.0.128/25",
            "id": "subnet-05f75e9a9e2c80c64",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226925361307",
            "tags": {
              "Name": "prod_us_east-public-subnet"
            },
            "tags_all": {
              "Name": "prod_us_east-public-subnet"
            },
            "vpc_id": "vpc-0e3a75a0882ad8f79"
          },
          "dependencies": [
            "module.prod_vpc_east_1_deploy.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_east_1_deploy",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226925361307:vpc/vpc-0e3a75a0882ad8f79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.25.0.0/20",
            "default_network_acl_id": "acl-0bd259e54990444fb",
            "default_route_table_id": "rtb-0cac62e84a01a5b55",
            "default_security_group_id": "sg-0684b5fde2666952f",
            "dhcp_options_id": "dopt-0c534b5c951b15390",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e3a75a0882ad8f79",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cac62e84a01a5b55",
            "owner_id": "226925361307"
          }
        }
      ]
    },
    {
      "module": "module.prod_vpc_east_1_tgw_attach",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0b1de40f058369bab",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-005b2d91510595aa9",
              "subnet-05ad8a03574708155"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-04916ed6d9e14938a",
            "vpc_id": "vpc-0e3a75a0882ad8f79",
            "vpc_owner_id": "226925361307"
          },
          "dependencies": [
            "module.prod_vpc_east_1_deploy.aws_subnet.private_subnet",
            "module.prod_vpc_east_1_deploy.aws_vpc.vpc",
            "module.transit_gateway_us_east_1.aws_ec2_transit_gateway.transit_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway_us_east_1",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "transit_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64514,
            "arn": "arn:aws:ec2:us-east-1:226925361307:transit-gateway/tgw-04916ed6d9e14938a",
            "association_default_route_table_id": "tgw-rtb-001d39da439e9c647",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway for US-East-1 VPCs",
            "dns_support": "enable",
            "id": "tgw-04916ed6d9e14938a",
            "owner_id": "226925361307",
            "propagation_default_route_table_id": "tgw-rtb-001d39da439e9c647",
            "tags": {
              "Name": "prod-us-east-1-transit-gateway"
            },
            "tags_all": {
              "Name": "prod-us-east-1-transit-gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    }
  ]
}